--- a/restaurant-service/src/main/resources/application.properties
+++ b/restaurant-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8081
-spring.application.name= Restaurant-Service
+spring.application.name= RESTAURANT-SERVICE
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone= http://localhost:8761/eureka/
